# dogged

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dogged/: __init__.py  _types.py  circuit_breaker.py  memoize.py  rate_limit.py  retry.py  timeout.py
tests/: test_circuit_breaker.py  test_dual_form.py  test_memoize.py  test_properties.py  test_rate_limit.py  test_retry.py  test_timeout.py
