[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dogged"
version = "0.1.0"
description = "Zero-dependency, strictly-typed resilience decorators for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Ruelas" }]
keywords = ["decorators", "retry", "timeout", "circuit-breaker", "rate-limit", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/jcarlosrv/dogged"
Repository = "https://github.com/jcarlosrv/dogged"

[tool.hatch.build.targets.wheel]
packages = ["src/dogged"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"